💚 add write permission for github pages deployment

--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -1,10 +1,13 @@
-# .github/workflows/deploy-docs.yml
 name: Deploy Docusaurus Site
 
 on:
   push:
     branches:
       - main
+
+# Add permissions block
+permissions:
+  contents: write # This allows the action to create and push to gh-pages
 
 jobs:
   deploy:
