feat: add Lightning Network support with LNBits integration - Add decode_invoice and pay_invoice tools - Add LNBits client for Lightning operations - Make Lightning config optional - Update documentation

--- a/.env.example
+++ b/.env.example
@@ -7,3 +7,8 @@ BITCOIN_NETWORK=mainnet
 # Server mode (e.g., stdio or sse) and port (if applicable)
 SERVER_MODE=stdio
 PORT=3000
+
+## lnbits information
+LNBITS_URL="https://demo.lnbits.com"
+LNBITS_ADMIN_KEY="..."
+LNBITS_READ_KEY="..."
